--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "third",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
     "lint:js": "eslint . && prettier-eslint --list-different **/*.js",
     "lint:css": "stylelint **/*.js",
     "lint": "npm run lint:js && npm run lint:css",
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --mode production",
+    "deploy": "gh-pages -d dist",
+    "publish-demo": "npm run build && npm run deploy",
     "dev": "webpack-dev-server --config webpack.config.js --open"
   },
   "keywords": [],
