--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:css": "stylelint **/*.js",
     "lint": "npm run lint:js && npm run lint:css",
     "build": "webpack --mode production",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist -b master",
     "publish-demo": "npm run build && npm run deploy",
     "dev": "webpack-dev-server --config webpack.config.js --open"
   },
@@ -27,6 +27,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "compression-webpack-plugin": "^4.0.0",
+    "css-loader": "^3.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.3.5",
@@ -34,11 +35,13 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
     "jest-styled-components": "^6.3.3",
     "prettier": "^2.0.5",
     "react-dom": "^16.13.1",
+    "style-loader": "^1.2.1",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
@@ -47,8 +50,13 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.9",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "styled-components": "^4.3.2",
     "stylelint": "^13.6.1"
   }
